--- a/rounded.cabal
+++ b/rounded.cabal
@@ -8,11 +8,11 @@ license-file:       LICENSE
 author:             Edward A. Kmett, Daniel G. Peebles, Claude Heiland-Allen
 maintainer:         Claude Heiland-Allen <claude@mathr.co.uk>
 copyright:          Copyright (C) 2012-2014 Edward A. Kmett, Daniel G. Peebles;
-                    Copyright (C) 2013-2018 Claude Heiland-Allen
+                    Copyright (C) 2013-2019 Claude Heiland-Allen
 category:           Numeric, Math
 build-type:         Simple
 cabal-version:      1.22
-tested-with:        GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.1
+tested-with:        GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.1, GHC == 8.8.1
 description:
     This package provides numeric instances for MPFR that use
     \"Implicit Configurations\" from
@@ -55,7 +55,7 @@ library
     Numeric.Rounded.Precision
 
   build-depends:
-    base             >= 4.8     && < 4.13,
+    base             >= 4.8     && < 4.14,
     ghc-prim         >= 0.4     && < 0.6,
     reflection       >= 2.1.2   && < 2.2,
     hgmp             >= 0.1.1   && < 0.2,
