--- a/rounded.cabal
+++ b/rounded.cabal
@@ -1,5 +1,5 @@
 name:               rounded
-version:            0.1.0.1
+version:            0.2
 synopsis:           Correctly-rounded arbitrary-precision floating-point arithmetic
 homepage:           https://github.com/ekmett/rounded
 bug-reports:        https://github.com/ekmett/rounded/issues
@@ -37,7 +37,11 @@ source-repository head
 source-repository this
   type: git
   location: git://github.com/ekmett/rounded.git
-  tag: rounded-0.1.0.1
+  tag: rounded-0.2
+
+flag mpfr40
+  description: use features new in MPFR 4.0.x
+  default: True
 
 library
   exposed-modules:
@@ -65,6 +69,10 @@ library
   build-tools:     hsc2hs
 
   extra-libraries: mpfr gmp
+
+  if flag(mpfr40)
+    pkgconfig-depends: mpfr >= 4.0.0
+    cpp-options: -DHAVE_MPFR_4_0
 
   hs-source-dirs:  src
   c-sources:       cbits/wrappers.c
