--- a/rounded.cabal
+++ b/rounded.cabal
@@ -12,7 +12,7 @@ copyright:          Copyright (C) 2012-2014 Edward A. Kmett, Daniel G. Peebles;
 category:           Numeric, Math
 build-type:         Simple
 cabal-version:      1.22
-tested-with:        GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.1, GHC == 8.8.1
+tested-with:        GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.4, GHC == 9.0.1
 description:
     This package provides numeric instances for MPFR that use
     \"Implicit Configurations\" from
@@ -21,7 +21,7 @@ description:
     use reflection, explicit instances are provided for common precisions
     and for the built-in rounding modes.
     .
-    This package should work correctly with GHC 7.10.1 or later.
+    This package should work correctly with GHC 8.4.4 or later.
     .
     >>> import Numeric.Rounded
     >>> :set -XDataKinds
@@ -57,8 +57,8 @@ library
     Numeric.Rounded.Precision
 
   build-depends:
-    base             >= 4.8     && < 4.15,
-    ghc-prim         >= 0.4     && < 0.7,
+    base             >= 4.11    && < 4.16,
+    ghc-prim         >= 0.4     && < 0.8,
     reflection       >= 2.1.2   && < 2.2,
     hgmp             >= 0.1.1   && < 0.2,
     long-double      >= 0.1     && < 0.2
