--- a/rounded.cabal
+++ b/rounded.cabal
@@ -12,7 +12,7 @@ copyright:          Copyright (C) 2012-2014 Edward A. Kmett, Daniel G. Peebles;
 category:           Numeric, Math
 build-type:         Simple
 cabal-version:      1.22
-tested-with:        GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.4, GHC == 9.0.1
+tested-with:        GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.8, GHC == 9.4.7, GHC == 9.6.3
 description:
     This package provides numeric instances for MPFR that use
     \"Implicit Configurations\" from
